add some basic tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,11 +20,13 @@
 		"sourceMap": true,
 		"skipLibCheck": true,
 		"outDir": "./dist/",
+		"types": ["jest", "node"]
 	},
 	"include": [
 		"credentials/**/*",
 		"nodes/**/*",
 		"nodes/**/*.json",
 		"package.json",
+		"**/__tests__/**/*.test.ts"
 	],
 }
