--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "format": "prettier nodes credentials --write",
     "lint": "eslint nodes credentials package.json",
     "lintfix": "eslint nodes credentials package.json --fix",
-    "prepublishOnly": "pnpm build && pnpm lint -c .eslintrc.prepublish.js nodes credentials package.json"
+    "prepublishOnly": "pnpm build && pnpm lint -c .eslintrc.prepublish.js nodes credentials package.json",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "files": [
     "dist"
@@ -43,10 +45,13 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@typescript-eslint/parser": "^7.15.0",
     "eslint": "^8.57.1",
     "eslint-plugin-n8n-nodes-base": "^1.16.1",
     "gulp": "^4.0.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "n8n-workflow": "*",
     "prettier": "^3.3.2",
     "typescript": "^5.5.3"
