Update Twenty node implementation

--- a/package.json
+++ b/package.json
@@ -51,12 +51,17 @@
     "eslint-plugin-n8n-nodes-base": "^1.16.1",
     "gulp": "^4.0.2",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
-    "n8n-workflow": "*",
+    "n8n-workflow": "^1.24.0",
     "prettier": "^3.3.2",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
     "n8n-workflow": "*"
+  },
+  "dependencies": {
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
+    "vm2": "^3.9.19"
   }
 }
