--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,14 +17,19 @@ jobs:
           node-version: '18'
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9.1.4
+
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install
 
       - name: Build
-        run: npm run build
+        run: pnpm run build
 
       - name: Pack
-        run: npm pack
+        run: pnpm pack
 
       - name: Create Release
         id: create_release
