fix: update Node.js version and add verbose logging

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           registry-url: 'https://registry.npmjs.org'
 
       - name: Setup pnpm
@@ -40,7 +40,10 @@ jobs:
         run: pnpm install --lockfile-only
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: |
+          echo "Node.js version: $(node -v)"
+          echo "pnpm version: $(pnpm -v)"
+          pnpm install --frozen-lockfile --verbose
 
       - name: Build
         run: pnpm run build
