--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,11 +69,15 @@ jobs:
       - name: Pack
         run: pnpm pack
 
+      - name: Get package version
+        id: get_version
+        run: echo "VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
+
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          files: ./n8n-nodes-twenty-*.tgz
+          files: ./n8n-nodes-twenty-${{ env.VERSION }}.tgz
           draft: false
           prerelease: false
         env:
@@ -85,6 +89,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./n8n-nodes-twenty-*.tgz
+          asset_path: ./n8n-nodes-twenty-${{ env.VERSION }}.tgz
           asset_name: n8n-nodes-twenty.tgz
           asset_content_type: application/gzip
